navbar + oprettede sidder

--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -1,14 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <!---if login == tru show navbar->
-    <div class="sidebar">
+    <!---if login == tru show navbar -->
+    <div class="">
        <NavMenu />
     </div>
     
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="about">About</a>
+            <a href="login">Login</a>
         </div>
 
         <article class="content px-4">
