--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -1,37 +1,59 @@
 ﻿<!--top container cornor-->
 <div class="top-row ps-3 navbar navbar-dark bg-success">
-    <div class="container-fluid bg-danger">
-        <a class="navbar-brand bg-dark" href="">Fitness Pal</a>
+    <div class="container-fluid">
+        <a class="navbar-brand" href=""><h3>Fitness Pal</h3></a>
     </div>
 </div>
 <!--Drop down ved mindre skærm-->
-<input type="checkbox" title="Navigation menu" class="navbar-toggler bg-light" />
+<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 <!--Nav down-->
-<div class="nav-scrollable bg-dark" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column bg-primary">
-        <div class="nav-item px-3 bg-info">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+<div class="nav-scrollable bg-success" onclick="document.querySelector('.navbar-toggler').click()">
+    <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="userProfile" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Profil
+            </NavLink>
+        </div>
+
+        @* <div class="nav-item px-3">
+            <NavLink class="nav-link" href="userProfile">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Profil
+            </NavLink>
+        </div>
+        *@
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="trainings">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Trainings
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="maps">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Map
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ratings">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> ratings
+            </NavLink>
+        </div>
+       @*  <div class="nav-item px-3">
             <NavLink class="nav-link" href="login">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
             </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
+        </div> *@
+       @*  <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
-        </div>
-
+        </div> *@
+@* 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
-        </div>
+        </div> *@
     </nav>
 </div>
 
