Made a controller and fixed verify hash

--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <!---if login == tru show navbar->
+    <!---if login == tru show navbar-->
     <div class="sidebar">
        <NavMenu />
     </div>
