oprettet form, labels og input på login siden

--- a/Frontend/Components/Pages/Login.razor
+++ b/Frontend/Components/Pages/Login.razor
@@ -1,7 +1,13 @@
 ﻿@page "/login"
 
-<h1>Login side </h1>
-
+<h1>Login</h1>
+<form class="col-12">
+    <label for="username">Username: </label>
+    <input type="text" id="username" name="username"><br><br>
+    <label for="password">Password: </label>
+    <input type="text" id="password" name="password"><br><br>
+    <input type="submit" value="sign in" >
+</form>
 
 
 @code {
