adding a <p> to the pages letting the users know the page is under construktion

--- a/Frontend/Components/Pages/Home.razor
+++ b/Frontend/Components/Pages/Home.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to Fitness Pal</h1>
+<h5>The site for finding Fitness Pals</h5>
 
-Welcome to your new app.
+<p> This page is under constrution...</p>
