--- a/Frontend/Components/Pages/Login.razor
+++ b/Frontend/Components/Pages/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 
 <h1>Login</h1>
+<p> This page is under constrution...</p>
 <form class="col-12">
     <label for="username">Username: </label>
     <input type="text" id="username" name="username"><br><br>
@@ -8,6 +9,7 @@
     <input type="text" id="password" name="password"><br><br>
     <input type="submit" value="sign in" >
 </form>
+
 
 
 @code {
