--- a/Frontend/Components/Pages/Login.razor
+++ b/Frontend/Components/Pages/Login.razor
@@ -2,17 +2,17 @@
 
 <h1>Login</h1>
 <p> This page is under constrution...</p>
-<form class="col-12">
+<form class="signIn">
     <label for="username">Username: </label>
     <input type="text" id="username" name="username"><br><br>
     <label for="password">Password: </label>
     <input type="text" id="password" name="password"><br><br>
-    <input type="submit" value="sign in" >
+    <button>Log ind</button> 
 </form>
 
 
 
 @code {
-    
+  
 }
 
