maps on refresh

--- a/Frontend/Components/Pages/Home.razor
+++ b/Frontend/Components/Pages/Home.razor
@@ -1,8 +1,12 @@
 ﻿@page "/"
+@using Microsoft.JSInterop
 
 <PageTitle>Home</PageTitle>
 
 <h1>Welcome to Fitness Pal</h1>
 <h5>The site for finding Fitness Pals</h5>
-
 <p> This page is under constrution...</p>
+
+@code {
+    
+}
