--- a/Frontend/Components/Pages/Maps.razor
+++ b/Frontend/Components/Pages/Maps.razor
@@ -25,7 +25,8 @@
     function initMap() {
         // Specify the initial center and zoom level of the map
         var mapOptions = {
-            center: { lat: 37.7749, lng: -122.4194 }, // San Francisco coordinates
+            /* center: { lat: 37.7749, lng: -122.4194 },  */// San Francisco coordinates
+            center: { lat: 56.448, lng: 9.395 }, //lokation omkring Viborg
             zoom: 12,
         };
 
