--- a/Frontend/Components/Pages/UserProfile.razor
+++ b/Frontend/Components/Pages/UserProfile.razor
@@ -1,6 +1,12 @@
 ﻿@page "/userProfile"
 <h3>Profil</h3>
 <p> This page is under constrution...</p>
+<form>
+    <label for="userId">søg på brugernavn </label>
+    <input type="text" id="userId" name="UserID"><br><br>
+    <button>Søg</button>
+</form>
+
 @code {
 
 }
