--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -22,22 +22,22 @@
         </div>
         *@
 
-        <div class="nav-item px-3">
+@*         <div class="nav-item px-3">
             <NavLink class="nav-link" href="trainings">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Trainings
             </NavLink>
-        </div>
+        </div> *@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="maps">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Map
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+   @*      <div class="nav-item px-3">
             <NavLink class="nav-link" href="ratings">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> ratings
             </NavLink>
-        </div>
+        </div> *@
        @*  <div class="nav-item px-3">
             <NavLink class="nav-link" href="login">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
